# adventofcode

./: adventofcode2020.cabal  get.sh  package.yaml  run.sh  stack.yaml
adventofcode-common/: adventofcode-common.cabal  package.yaml
adventofcode-haskell/: .gitignore  Makefile  README.md  runDay.sh  stack  stack.yaml
adventofcode-haskell/.devcontainer/: Dockerfile  devcontainer.json
adventofcode-haskell/adventofcode-common/: adventofcode-common.cabal  package.yaml
adventofcode-haskell/adventofcode2015/: package.yaml  (+1 more)
adventofcode-python/aoc2022/: pyproject.toml
adventofcode-python/aoc2022/src/: Day01.py  Day02.py  Day03.py  Day04.py  Day05.py  Day06.py  Day07.py  Day08.py  Day09.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day16.py
adventofcode-python/aoc2022/tests/: test_Day01.py  test_Day02.py  test_Day03.py  test_Day04.py  test_Day05.py  test_Day06.py  test_Day07.py  test_Day08.py  test_Day09.py  test_Day10.py  test_Day11.py  test_Day12.py  test_Day13.py  test_Day14.py  test_Day15.py  test_Day16.py
adventofcode2020/: adventofcode2020.cabal  package.yaml
haskell/: ChangeLog.md  stack.yaml
src/: AOC.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day19.hs  Day2.hs  Day21.hs  Day23.hs  Day3.hs
test/: Day01Spec.hs  Day05Spec.hs  Day06Spec.hs  Day08Spec.hs  Day09Spec.hs  Day11Spec.hs  Day12Spec.hs  Day14Spec.hs  Day16Spec.hs  Day17Spec.hs  Day1Spec.hs  Day20Spec.hs  Day22Spec.hs  Day23Spec.hs  Day24Spec.hs  Day25Spec.hs  Day2Spec.hs  Day3Spec.hs
(+343 files in other folders)
