[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Alex Lockhart <alex@lockhart.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
